# DevOps-Course-Starter

./: .env.template  .env.test  .gitignore  Dockerfile  README.md  Vagrantfile  docker-compose.yml  pyproject.toml  requirements.txt
todo_app/: app.py  flask_config.py  tempCodeRunnerFile.py
todo_app/data/: api.py  boards.py  tempCodeRunnerFile.py  view_model.py
todo_app/templates/: done.html  form.html  index.html  older_done.html  recent_done.html  update.html
todo_app/tests/: test_api.py  test_end_to_end.py  test_view_model.py
