[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = "A simple ToDo app for your DevOps apprenticeship"
authors = []

[tool.poetry.dependencies]
python = "^3.8"

Flask = "^1.1.2"
requests = "^2.25.1"
python-dotenv = "^0.17.0"


[tool.poetry.dev-dependencies]

selenium = "^3.141.0"
selenium-requests = "^1.3"
pytest = "^6.2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
